--- a/templates/base.html
+++ b/templates/base.html
@@ -17,12 +17,20 @@
         <li class="nav-item me-3"><a class="nav-link" href="#">About</a></li>
         <li class="nav-item me-3"><a class="nav-link" href="{{ url_for('fund') }}">Fund</a></li>
         <li class="nav-item me-3"><a class="nav-link" href="#">Risk Management Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Client Login</a></li>
+
+        <!-- Always show Client Portal -->
+        <li class="nav-item me-3"><a class="nav-link" href="{{ url_for('client_portal') }}">Client Portal</a></li>
+
+        <!-- Show login/logout depending on session -->
+        {% if user %}
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
+        {% else %}
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Client Login</a></li>
+        {% endif %}
       </ul>
     </div>
   </div>
 </nav>
-
 
 <div class="wide-container">
     {% block content %}{% endblock %}
