--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='styles.css') }}?v=1002" rel="stylesheet">
 </head>
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity=""
+        crossorigin="anonymous"></script>
+
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
